--- a/public/index.html
+++ b/public/index.html
@@ -1,17 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es-ES">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>VCard</title>
+    <title>VCard - Template</title>
   </head>
   <body>
     <noscript>
-      <strong>We're sorry but VCard doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+      <strong>Esta página no funcionará correctamente si tienes JavaScript desactivado. Por favor actívelo.</strong>
     </noscript>
     <div id="app"></div>
-    <!-- built files will be auto injected -->
   </body>
 </html>
