--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,12 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <meta name="description" content="Tarjeta virtual hecha en Vue">
+    <meta property="og:title" content="VCard - Template">
+    <meta property="og:description" content="Tarjeta virtual hecha en Vue">
+    <meta property="og:url" content="http://www.example.com/">
+    <meta property="og:image" content="<%= BASE_URL %>favicon.ico">
+    <meta property="og:type" content="website">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title>VCard - Template</title>
 </head>
